# local-media-listener

./: .clangd  .gitignore  build.gradle.kts  dev.sh  settings.gradle.kts
.github/workflows/: release.yml  test.yml
gradle/wrapper/: gradle-wrapper.properties
native-hooks/: CMakeLists.txt  Dockerfile.linux.amd64  Dockerfile.linux.arm64  build-all.sh  build-linux.sh  build-macos.sh  build-windows.ps1  build.sh  build_all_optimized.sh  build_darwin.sh  build_docker_images.sh  build_linux.sh  build_windows.sh  clean.sh  go.mod  main.go  main_darwin.go  main_linux.go  main_windows.go  test.sh
native-hooks/bridge/: bridge_darwin_amd64.c  bridge_darwin_arm64.c  bridge_linux_amd64.c  bridge_linux_arm64.c  bridge_unix.c  bridge_win.c  bridge_windows_amd64.c  bridge_windows_arm64.c
native-hooks/docker/: Dockerfile.linux-amd64  Dockerfile.linux-arm64
native-hooks/src/common/: IMediaProvider.cpp  IMediaProvider.h  MediaInfo.cpp  MediaInfo.h
native-hooks/src/core/: HttpServer.cpp  HttpServer.h  LocalMediaListener.cpp  LocalMediaListener.h
native-hooks/src/jni/: JNIBridge.cpp  JNIBridge.h
native-hooks/src/logging/: Logger.cpp  Logger.h
native-hooks/src/tests/: HttpServerTest.cpp  IMediaProviderTest.cpp  LocalMediaListenerTest.cpp  MacOSMediaProviderTest.cpp  MediaInfoTest.cpp  WebSocketSessionTest.cpp
native-hooks/winmedia_helper/: Cargo.toml
native-hooks/winmedia_helper/src/: main.rs
src/main/kotlin/: LocalMediaListener.kt  Main.kt
src/main/kotlin/bridge/: NativeBridge.kt  NativeLoader.kt
src/main/kotlin/data/: MediaInfo.kt
src/main/kotlin/dev/timlohrer/lml/: LocalMediaListener.kt  Logger.kt
src/main/kotlin/dev/timlohrer/lml/bridge/: NativeBridge.kt  NativeLoader.kt
src/main/kotlin/dev/timlohrer/lml/data/: MediaInfo.kt  TransportMediaInfo.kt
src/main/kotlin/dev/timlohrer/lml/networking/: NativeHookClient.kt
src/main/kotlin/networking/: NativeHookClient.kt
src/main/resources/lib/: libbridge_darwin_amd64.dylib  libbridge_darwin_arm64.dylib
